# pwndbg-mcp

./: LICENSE  README.md  README.zh_CN.md  pyproject.toml
pwndbg_mcp/: gdb_controller.py  main.py  server.py  tools.py  toon_formatter.py
