[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwndbg-mcp"
version = "0.1.0"
description = "An MCP tool endows AI agent with the capability to debug ELF"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pygdbmi>=0.11.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "hexdump>=3.3",
    "pwntools>=4.15.0",
    "toonify>=1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
pwndbg-mcp = "pwndbg_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["pwndbg_mcp"]
